mass assign change in user-profile-link , fixed z-index of newsbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,7 +142,7 @@ footer.page-footer {
 .jnews-teal-lighten-2{
   background-color: #4db6ac;
   border-color: #ffebee;
-  z-index: 998;
+  z-index: 800;
 }
 .jnews-teal-lighten-2, .jnews-teal-lighten-2 h2, .jnews-teal-lighten-2 a{
   color: #ffffff;
